# Uploader-Serice

./: .env  .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_integration.py  test_monitor.py  test_tracker.py  test_upload_service.py  test_uploader.py
upload_service/: __init__.py  cli.py  coordinator.py  models.py  monitor.py  scanner.py  tracker.py  uploader.py
